--- a/Belly_Button_Biodiversity/static/css/style.css
+++ b/Belly_Button_Biodiversity/static/css/style.css
@@ -1,16 +1,22 @@
-body {
-    /* font-family: "Shallow Grave BB";  */
-    font-family: "Lucida Handwriting";
+html {
+    background: url(../images/sharp2.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
-h1 {
-    color: white;
-    font-size: 24px;
+body {
+    /* font-family: "Shallow Grave BB";  */
+    font-family: "Lucida Handwriting";  
+}
+
+h1 { Font-size: 40px;
 }
 
 h2 {
     color: white;
-    font-size: 48px;
+    font-size: 24px;
     letter-spacing: 3px;
 }
 
@@ -20,30 +26,71 @@ h5 {
 }
 
 .panel-body {
-   padding: 0px; 
-   width: auto;
+    padding: 0px;
+    width: auto;
 }
 
+.panel {
+    background-color: #023b55;
+}
+
+.panel-title {
+    text-align: center;
+}
 td {
+    background-color: white;
+    /* background: rgb(217, 237, 241); */
     padding: 5px;
     margin: 5px;
 }
 
 .jumbotron, .well, .table-head {
-    background-color: rgb(208, 244, 253);
+    background-color: rgb(217, 237, 241);
+    font-size: 36px;
+    opacity: 90%;
+    border-color: rgb(71, 139, 199);
+    border-width: 5px;
 }
 .table {
     font-size: 12px;
 }  
 .well {
     padding: 10px;
-}  
-  @media(max-width: 780px) {
+}
 
+#header-page {
+    background-color: rgb(188, 221, 236);
+    opacity: 90%;
+    padding: 15px;
+    border-radius: 5px;
+}
 
-  .table {
-      table-layout: auto;
-      width: 100%;}
-
+.sgv-container, .main-sgv, #bar {
+    width: 100%;
+    height: 20%;
+    background-color: rgb(217, 237, 241);
+    size: 60%;      
 
 }
+.js-plotly-plot {
+    border-radius: 10px;
+}
+
+#selDataset {
+    margin-top: 10px;
+    margin-left: 10px;
+}
+#barArea {
+    /* background-color: azure; */
+    border-radius: 10px;
+}
+
+@media(max-width: 780px) {
+
+
+h1 {
+    font-size: 18px;
+    padding-top: 15px;
+ }
+
+  }
