--- a/Belly_Button_Biodiversity/static/css/style.css
+++ b/Belly_Button_Biodiversity/static/css/style.css
@@ -1,8 +1,8 @@
 html {
     background: url(../images/sharp2.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
+    /* -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;
+    -o-background-size: cover; */
     background-size: cover;
 }
 
@@ -45,11 +45,12 @@ td {
 }
 
 .jumbotron, .well, .table-head {
-    background-color: rgb(217, 237, 241);
+    background-color:  rgb(40, 76, 107);
+    color: white;
     font-size: 36px;
-    opacity: 90%;
-    border-color: rgb(71, 139, 199);
-    border-width: 5px;
+    /* opacity: 90%; */
+    border-color: white;
+    border-width: 3px;
 }
 .table {
     font-size: 12px;
@@ -59,8 +60,10 @@ td {
 }
 
 #header-page {
-    background-color: rgb(188, 221, 236);
-    opacity: 90%;
+    background-color: rgb(106, 156, 201);
+    /* opacity: 90%;
+     */
+    color: white;
     padding: 15px;
     border-radius: 5px;
 }
@@ -78,7 +81,9 @@ td {
 
 #selDataset {
     margin-top: 10px;
+    padding: 5px;
     margin-left: 10px;
+    color: black;
 }
 #barArea {
     /* background-color: azure; */
